<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ffbaba">
    <!-- Color change might be required -->

    <!-- This Layout is for the Top Left Logo Icon -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/applogo"
            android:src="@drawable/applogo"/>
    </LinearLayout>

    <!-- This is for the Two Information Icons   -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/information_about_designers"
            android:src="@drawable/user"
            android:id="@+id/aboutDesigners"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/information_about_the_app"
            android:src="@drawable/questionmark"
            android:id="@+id/AboutApp"/>
    </LinearLayout>

    <!--  This is the Heading  -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/hi"
            android:textColor="#6f6f6f"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Afzal!"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="18sp"/>
    </LinearLayout>

    <!--  This is the Category Sector  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        android:background="@drawable/activity_main_category_background"
        android:id="@+id/CategorySectorLayout">
        <!--   Category Heading Part     -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="#424549"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!--    Space to Hold Category Items from the list    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"
                android:overScrollMode="never"
                android:id="@+id/main_activity_category_recycle_view">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

        <!--   To Display Initial Welcome text     -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true">

                <TextView
                    android:layout_width="225dp"
                    android:layout_height="135dp"
                    android:layout_marginTop="100dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:gravity="center"
                    android:text="@string/welcome_choose_your_category"
                    android:textSize="30sp"
                    android:id="@+id/InitialText"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>

    </LinearLayout>

    <!--   Space to Hold Product Items (Fragment Section)     -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="375dp"
        android:orientation="vertical"
        android:id="@+id/ProductListArea">
    </LinearLayout>

</RelativeLayout>